--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
 }
 
 nav {
-    width: auto;
-    height: auto;
+    width: 100vw;
+    height: 5vh;
 }
 
 nav ul {
@@ -45,7 +45,8 @@ nav ul li {
     cursor: pointer;
     list-style: none;
     list-style-type: none;
-    font-size: 20px;
+    transform: scale(1);
+    transition: transform 0.2s;
     text-decoration: bolder;
     color: white;
     margin: 12px 0;
@@ -53,14 +54,16 @@ nav ul li {
 }
 
 nav ul li a {
-    /* To remove the underline and hyperlink colors in the navbar */
-    color: inherit;
+    color: white;
     text-decoration: inherit;
 }
 
 nav ul li:hover {
-    color: rgb(234, 191, 243);
-    font-size: 23px;
+    color: rgb(76, 26, 86);
+    transform: scale(1.1);
+    -webkit-transition: color 1000ms;
+    -ms-transition: color 1000ms;
+    transition: color 1000ms;
 }
 
 .headline {
@@ -145,4 +148,16 @@ footer:hover {
         width: 100vw;
     }
 
+}
+
+@media screen and (max-width: 1100px) {
+    nav ul{
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 950px) { 
+    .container {
+        width: 80vw;
+    }
 }
